feat: downloadThruFFmpegクラスのバージョン番号を251002004に更新し、-f hlsオプションを削除して互換性オプションを追加しました。また、処理中のリクエストを管理するためのConcurrentHashMapを導入し、FFmpegのコマンド生成を改善しました。これにより、ダウンロードダイアログボックスが複数回表示されてしまう不具合が改善されます。